# sam-cfn-publish

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  ToDo.md  convert.sh  requirements.txt  setup.cfg  template.yaml
sam_cfn_publish/: __init__.py  __main__.py  helpers.py  inline_functions.py  move_assets.py  tags_metadata.py  tidy_tags_metadata.py
sam_publish/: __init__.py  __main__.py  helpers.py  inline_functions.py  move_assets.py  sam_publish.py  sam_translate.py  tidy_tags_metadata.py  update_references.py
samples/: cfn-template.yaml  convertSAM2CFN.sh  packaged-template.yaml  sam-template.yaml
samples/src/lambda/testFunction/: index.py
samples/src/layer/SampleLayer/: my_dummy_function  requirements.txt
