[metadata]
name = sam-publish
# version = attr: my_package.VERSION
version = 0.1.0
author = Pete Davis
author_email = pete@peterjdavis.info
# description = My package description
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = "SAM", "CloudFormation", "Serverless Application Model"
# license = BSD-3-Clause
classifiers =
    # Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    boto3
    cfn-flip
    aws-sam-translator

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = sam_publish:sam_publsh

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    .venv
    samples*
