[metadata]
name = sam-cfn-publish
# version = attr: my_package.VERSION
version = 0.2.4
author = Pete Davis
author_email = pete@peterjdavis.info
description = A tool for formatting AWS Serverless Application Model (SAM) templates to CloudFormation for publishing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peterjdavis/sam-cfn-publish
keywords = "SAM", "CloudFormation", "Serverless Application Model"
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7, <=4.0, !=4.0
install_requires =
    boto3
    cfn-flip
    aws-sam-translator

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    sam-cfn-publish = sam_cfn_publish.__main__:main

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    .venv
    samples*
